Update and rename 2017-02-13-Ubuntu-Ubuntu16.04的那些事儿.md to 2017-02-13-Ubuntu16.04的那些事儿.md

--- a/_posts/2017-02-13-Ubuntu16.04的那些事儿.md
+++ b/_posts/2017-02-13-Ubuntu16.04的那些事儿.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Ubuntu-Ubuntu16.04的那些事儿
+title: Ubuntu16.04的那些事儿
 date: 2017-02-13
 categories: blog
 tages: [Ubuntu]
@@ -16,38 +16,38 @@ description: ubuntu16.04的那些事儿
 我先来写写打造完美的ubuntu开发环境吧。对一般人来说，总喜欢自己的系统看起来和用起来和别人不一样。
 我一开始弄的是mac主题，后来感觉在有点装哈，然后就在网上看到了基于gnome3的numix主题，最后把两者结合起来。
  
- 一些安装前的准备
+	一些安装前的准备:
  
- 切换到root用户：
- sudo su
- (这时系统会要你输入密码，但密码不会在屏幕上显示，到时候不要以为自己没有输)
- 添加源：
- add-apt-repository ppa:noobslab/macbuntu
+ 	切换到root用户：
+		sudo su
+	 	(这时系统会要你输入密码，但密码不会在屏幕上显示，到时候不要以为自己没有输)
+ 	添加源：
+		add-apt-repository ppa:noobslab/macbuntu
  
- 更新源：
- apt update
- 
- 下载主题（这里我们不下载mac的图标）：
- apt install macbuntu-os-ithemes-lts-v7
- 卸载命令:
- cd /usr/share/icons/mac-cursors && sudo ./uninstall-mac-cursors.sh
- apt remove macbuntu-os-ithemes-lts-v7
+ 	更新源：
+		apt update
 
- 安装plank:
- apt install plank
- 
- 安装修改工具：
- apt install unity-tweak-tool
- apt install gnome-tweak-tool
- 
- 修改主题#
+	 下载主题（这里我们不下载mac的图标）：
+		 apt install macbuntu-os-ithemes-lts-v7
+	 卸载命令:
+		 cd /usr/share/icons/mac-cursors && sudo ./uninstall-mac-cursors.sh
+		 apt remove macbuntu-os-ithemes-lts-v7
 
-找到下载的壁纸，选择一张喜欢的设置成背景
+	 安装plank:
+		 apt install plank
 
-按win键，打开搜索，搜索unity-tweak-tool并打开：
+	 安装修改工具：
+		 apt install unity-tweak-tool
+		 apt install gnome-tweak-tool
 
-主题选择Macbuntu-os
+	 修改主题:
 
-图标选择Macbuntu-os
+		 找到下载的壁纸，选择一张喜欢的设置成背景
 
-指针选择Mac-cursors
+		 按win键，打开搜索，搜索unity-tweak-tool并打开：
+
+		 主题选择Macbuntu-os
+
+		 图标选择Macbuntu-os
+
+		 指针选择Mac-cursors
